README update for AdaptiveCVInstances fix